--- a/CG.ScreenSaver.WinWpf/CG.ScreenSaver.WinWpf.csproj
+++ b/CG.ScreenSaver.WinWpf/CG.ScreenSaver.WinWpf.csproj
@@ -1,9 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
+  <PropertyGroup Label="Globals">
+    <WebView2LoaderPreference>Static</WebView2LoaderPreference>
+  </PropertyGroup>
+
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <AssemblyName>CG.ScreenSaver.WinWpf</AssemblyName>
+    <StartupObject>CG.ScreenSaver.WinWpf.App</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1248-prerelease" />
+    <PackageReference Include="WpfScreenHelper" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
